<resources>
    <string name="app_name">re:mind</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="nav_header_desc">Navigation Header</string>

    <string name="menu_overview">Overview</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>

    <string name="menu_group_others">Others</string>

    <string-array name="nav_item_activity_titles">
        <item>Overview</item>
        <item>Map</item>
        <item>Settings</item>
    </string-array>

    <string-array name="filter">
        <item>All</item>
        <item>Homework</item>
        <item>Event</item>
        <item>Shopping List</item>
    </string-array>

    <string name="nav_fab_content_description">Add Task</string>

    <string name="bottom_sheet_edittext_hint">Title</string>
    <string name="no_alert_text">No Alert</string>
    <string name="time_alert_text">Time</string>
    <string name="place_alert_text">Place</string>
    <string name="quick_add">Quick Add</string>
    <string name="sub_items">Sub Items</string>
    <string name="title_task_list">Tasks</string>
    <string name="title_task_detail">Task Detail</string>

    <string name="milk">Milk</string>
    <string name="eggs">Eggs</string>
    <string name="oreos">Oreos</string>
    <string name="coffee">Coffee</string>
    <string name="chicken">Chicken</string>
    <string name="tea">Tea</string>

    <string name="description">Description</string>

    <string name="due_date">Due Date</string>
    <string name="set_location">Set Location</string>
    <string name="repeat">Repeat</string>
    <string name="share">Share</string>
    <string name="set_category">Set Category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
