<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/nav_overview"
            android:title="@string/menu_overview" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/nav_map"
            android:title="@string/menu_map" />

    </group>

    <item android:title="@string/menu_group_others">

        <menu>

            <item
                android:id="@+id/nav_settings"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/nav_about_us"
                android:title="@string/menu_about_us" />

            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/menu_privacy_policy" />

        </menu>

    </item>

</menu>
