<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="48dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <EditText
        android:id="@+id/add_reminder_edittext"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/bottom_sheet_edittext_hint"
        android:textSize="24sp"
        android:lines="1"
        android:background="@android:color/white"
        android:paddingStart="4dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/alert_option"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_reminder_button"/>

    <ImageButton
        android:id="@+id/add_reminder_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/add_black"
        android:scaleType="centerCrop"
        android:background="@drawable/add_reminder_button_background"
        app:layout_constraintTop_toTopOf="@id/add_reminder_edittext"
        app:layout_constraintBottom_toBottomOf="@id/add_reminder_edittext"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/alert_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/no_alert"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_alert_text"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/time_alert"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_alert_text"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/place_alert"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_alert_text"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>